--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,14 @@ name: Build Zen Browser Portable
 
 on:
   schedule:
-    - cron: '0 2 * * *' # 每天 UTC 时间凌晨 2 点自动运行 (北京时间上午 10 点)
+    - cron: '0 2 * * *' # 每天 UTC 时间凌晨 2 点自动运行
   workflow_dispatch: # 允许手动点按钮触发
 
 jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: write # 允许发布 Release
+      contents: write # 必须有这个权限才能发布 Release
 
     steps:
     - name: Checkout code
@@ -18,10 +18,25 @@ jobs:
     - name: Find and Download Latest Zen Browser
       id: download
       shell: powershell
+      env:
+        # 关键修改 1: 将 GitHub 自动生成的 Token 传入环境变量
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        # 1. 获取 GitHub API 数据 (获取最新发布的 5 个版本以防万一)
+        # 1. 获取 GitHub API 数据 (带鉴权，防限流)
         $url = "https://api.github.com/repos/zen-browser/desktop/releases?per_page=5"
-        $releases = Invoke-RestMethod -Uri $url -Method Get
+        
+        # 关键修改 2: 组装 Headers，带上身份证
+        $headers = @{ 
+            "Authorization" = "token $env:GH_TOKEN"
+            "User-Agent" = "ZenPortableBuilder"
+        }
+        
+        try {
+            $releases = Invoke-RestMethod -Uri $url -Method Get -Headers $headers
+        } catch {
+            Write-Error "API Request Failed: $($_.Exception.Message)"
+            exit 1
+        }
 
         # 2. 寻找符合条件的文件 (Win x64, Installer 或 Zip)
         $downloadUrl = ""
@@ -53,15 +68,18 @@ jobs:
         if ($downloadUrl.EndsWith(".zip")) { $outputFile = "zen_setup.zip" }
         Invoke-WebRequest -Uri $downloadUrl -OutFile $outputFile
         
-        # 设置输出变量供后续步骤使用
+        # 设置输出变量
         echo "VERSION=$version" >> $env:GITHUB_OUTPUT
         echo "SETUP_FILE=$outputFile" >> $env:GITHUB_OUTPUT
 
     - name: Check if Release Exists
       id: check_release
       shell: powershell
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         $tag = "${{ steps.download.outputs.VERSION }}"
+        # 使用 gh 命令行工具检查 Release 是否存在
         try {
             gh release view $tag
             echo "EXISTS=true" >> $env:GITHUB_OUTPUT
@@ -70,35 +88,30 @@ jobs:
             echo "EXISTS=false" >> $env:GITHUB_OUTPUT
             Write-Host "Release $tag does not exist. Proceeding."
         }
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Extract Zen Browser
       if: steps.check_release.outputs.EXISTS == 'false'
       shell: powershell
       run: |
-        # 创建目录
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\ZenBrowser"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\AppInfo"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\Data"
         
-        # 使用 7-Zip 解压 (GitHub Runner 自带 7z)
         $file = "${{ steps.download.outputs.SETUP_FILE }}"
         $dest = "TempExtract"
+        # 使用 7-Zip 解压
         7z x $file -o$dest -y
         
-        # 智能移动文件：寻找 core 文件夹或直接移动
+        # 智能移动文件
         $corePath = "$dest\core"
         if (Test-Path $corePath) {
             Move-Item "$corePath\*" "ZenBrowserPortable\App\ZenBrowser"
         } else {
-            # 如果没有 core，可能是 zip 包，尝试找 zen.exe 所在的文件夹
             $zenExe = Get-ChildItem -Path $dest -Filter "zen.exe" -Recurse | Select-Object -First 1
             if ($zenExe) {
                 $parent = $zenExe.DirectoryName
                 Move-Item "$parent\*" "ZenBrowserPortable\App\ZenBrowser"
             } else {
-                 # 实在找不到，就把解压出来的所有东西放进去
                  Move-Item "$dest\*" "ZenBrowserPortable\App\ZenBrowser"
             }
         }
@@ -107,14 +120,11 @@ jobs:
       if: steps.check_release.outputs.EXISTS == 'false'
       shell: cmd
       run: |
-        :: 复制配置文件
         copy appinfo.ini ZenBrowserPortable\App\AppInfo\
         if exist appicon.ico copy appicon.ico ZenBrowserPortable\App\AppInfo\
         
-        :: 编译 C#
         set CSC=%windir%\Microsoft.NET\Framework64\v4.0.30319\csc.exe
         
-        :: 如果有图标就带图标编译，没有就普通编译
         if exist appicon.ico (
             "%CSC%" /target:exe /out:ZenBrowserPortable\ZenBrowserPortable.exe /win32icon:appicon.ico /r:System.Windows.Forms.dll Launcher.cs
         ) else (
