--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,34 +2,28 @@ name: Build Zen Browser Portable
 
 on:
   schedule:
-    - cron: '0 2 * * *' # 每天 UTC 时间凌晨 2 点自动运行
-  workflow_dispatch: # 允许手动点按钮触发
+    - cron: '0 2 * * *' # 每天自动检查更新
+  workflow_dispatch: # 允许手动触发
 
 jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: write # 必须有这个权限才能发布 Release
+      contents: write # 必须权限：允许发布 Release
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Find and Download Latest Zen Browser
+    - name: Find and Download zen.installer.exe
       id: download
       shell: powershell
       env:
-        # 关键修改 1: 将 GitHub 自动生成的 Token 传入环境变量
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        # 1. 获取 GitHub API 数据 (带鉴权，防限流)
+        # 1. 获取 GitHub API (带 Token 防止限流)
         $url = "https://api.github.com/repos/zen-browser/desktop/releases?per_page=5"
-        
-        # 关键修改 2: 组装 Headers，带上身份证
-        $headers = @{ 
-            "Authorization" = "token $env:GH_TOKEN"
-            "User-Agent" = "ZenPortableBuilder"
-        }
+        $headers = @{ "Authorization" = "token $env:GH_TOKEN" }
         
         try {
             $releases = Invoke-RestMethod -Uri $url -Method Get -Headers $headers
@@ -38,15 +32,14 @@ jobs:
             exit 1
         }
 
-        # 2. 寻找符合条件的文件 (Win x64, Installer 或 Zip)
         $downloadUrl = ""
         $version = ""
-        
+
+        # 2. 遍历发布版本，寻找 zen.installer.exe
         foreach ($release in $releases) {
             foreach ($asset in $release.assets) {
-                $name = $asset.name.ToLower()
-                # 排除 arm64, 必须是 exe 或 zip, 必须包含 win
-                if (($name -match ".exe" -or $name -match ".zip") -and $name -match "win" -and $name -notmatch "arm64" -and $name -notmatch "aarch64") {
+                # === 核心修改：精确匹配文件名 ===
+                if ($asset.name -eq "zen.installer.exe") {
                     $downloadUrl = $asset.browser_download_url
                     $version = $release.tag_name
                     break
@@ -56,21 +49,18 @@ jobs:
         }
 
         if (-not $downloadUrl) {
-            Write-Error "Could not find a suitable Windows x64 release."
+            Write-Error "Could not find 'zen.installer.exe' in recent releases."
             exit 1
         }
 
-        Write-Host "Found Version: $version"
-        Write-Host "URL: $downloadUrl"
+        Write-Host "Target Version: $version"
+        Write-Host "Download URL: $downloadUrl"
         
-        # 3. 下载
-        $outputFile = "zen_setup.exe"
-        if ($downloadUrl.EndsWith(".zip")) { $outputFile = "zen_setup.zip" }
-        Invoke-WebRequest -Uri $downloadUrl -OutFile $outputFile
+        # 3. 下载文件
+        Invoke-WebRequest -Uri $downloadUrl -OutFile "zen_installer.exe"
         
-        # 设置输出变量
+        # 4. 输出变量
         echo "VERSION=$version" >> $env:GITHUB_OUTPUT
-        echo "SETUP_FILE=$outputFile" >> $env:GITHUB_OUTPUT
 
     - name: Check if Release Exists
       id: check_release
@@ -79,40 +69,43 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         $tag = "${{ steps.download.outputs.VERSION }}"
-        # 使用 gh 命令行工具检查 Release 是否存在
         try {
             gh release view $tag
             echo "EXISTS=true" >> $env:GITHUB_OUTPUT
-            Write-Host "Release $tag already exists. Skipping."
+            Write-Host "Release $tag already exists. Skipping build."
         } catch {
             echo "EXISTS=false" >> $env:GITHUB_OUTPUT
-            Write-Host "Release $tag does not exist. Proceeding."
+            Write-Host "New version found ($tag). Starting build."
         }
 
-    - name: Extract Zen Browser
+    - name: Extract Installer (Using 7-Zip)
       if: steps.check_release.outputs.EXISTS == 'false'
       shell: powershell
       run: |
+        # 创建标准目录结构
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\ZenBrowser"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\App\AppInfo"
         New-Item -ItemType Directory -Force -Path "ZenBrowserPortable\Data"
         
-        $file = "${{ steps.download.outputs.SETUP_FILE }}"
-        $dest = "TempExtract"
-        # 使用 7-Zip 解压
-        7z x $file -o$dest -y
+        # 使用 7-Zip 强行解压 exe 安装包
+        # -o 指定输出目录, -y 自动确认
+        7z x "zen_installer.exe" -o"TempExtract" -y
         
-        # 智能移动文件
-        $corePath = "$dest\core"
+        # 处理安装包结构：安装包解压后通常都在 'core' 文件夹里
+        $corePath = "TempExtract\core"
+        
         if (Test-Path $corePath) {
+            Write-Host "Found 'core' folder, moving files..."
             Move-Item "$corePath\*" "ZenBrowserPortable\App\ZenBrowser"
         } else {
-            $zenExe = Get-ChildItem -Path $dest -Filter "zen.exe" -Recurse | Select-Object -First 1
+            # 如果结构变了，尝试全量移动并寻找 zen.exe
+            Write-Host "'core' folder not found, attempting heuristic move..."
+            $zenExe = Get-ChildItem -Path "TempExtract" -Filter "zen.exe" -Recurse | Select-Object -First 1
             if ($zenExe) {
-                $parent = $zenExe.DirectoryName
-                Move-Item "$parent\*" "ZenBrowserPortable\App\ZenBrowser"
+                Move-Item "$($zenExe.DirectoryName)\*" "ZenBrowserPortable\App\ZenBrowser"
             } else {
-                 Move-Item "$dest\*" "ZenBrowserPortable\App\ZenBrowser"
+                Write-Error "Extraction failed: zen.exe not found in installer."
+                exit 1
             }
         }
 
@@ -120,9 +113,11 @@ jobs:
       if: steps.check_release.outputs.EXISTS == 'false'
       shell: cmd
       run: |
+        :: 复制配置文件
         copy appinfo.ini ZenBrowserPortable\App\AppInfo\
         if exist appicon.ico copy appicon.ico ZenBrowserPortable\App\AppInfo\
         
+        :: 使用 .NET 编译器生成启动器
         set CSC=%windir%\Microsoft.NET\Framework64\v4.0.30319\csc.exe
         
         if exist appicon.ico (
@@ -131,7 +126,7 @@ jobs:
             "%CSC%" /target:exe /out:ZenBrowserPortable\ZenBrowserPortable.exe /r:System.Windows.Forms.dll Launcher.cs
         )
 
-    - name: Package Portable App
+    - name: Package to ZIP
       if: steps.check_release.outputs.EXISTS == 'false'
       shell: powershell
       run: |
@@ -140,7 +135,7 @@ jobs:
         Compress-Archive -Path "ZenBrowserPortable" -DestinationPath $zipName
         echo "ZIP_NAME=$zipName" >> $env:GITHUB_OUTPUT
 
-    - name: Create Release
+    - name: Upload Release
       if: steps.check_release.outputs.EXISTS == 'false'
       uses: softprops/action-gh-release@v1
       with:
@@ -148,7 +143,7 @@ jobs:
         name: Zen Browser Portable ${{ steps.download.outputs.VERSION }}
         files: ${{ steps.package.outputs.ZIP_NAME }}
         body: |
-          Automatic build of Zen Browser Portable.
-          Based on official release: ${{ steps.download.outputs.VERSION }}
+          Auto-generated Portable Version.
+          Source: zen.installer.exe from ${{ steps.download.outputs.VERSION }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
